Add influxDb and read/write data
